--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,15 +6,15 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" routerLink="/">Inicio</a>
+                <a class="nav-link" [routerLink]="['']" routerLinkActive="active">Inicio</a>
             </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" routerLink="/login">Iniciar Sesión</a>
+                <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Iniciar Sesión</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/register">Registro</a>
+                <a class="nav-link" [routerLink]="['register']" routerLinkActive="register">Registro</a>
             </li>
         </ul>
     </div>
