[Front] Creados los formularios de login y registro

--- a/src/app/auth/components/reset-password/reset-password.component.html
+++ b/src/app/auth/components/reset-password/reset-password.component.html
@@ -1,1 +1,15 @@
-<p>reset-password works!</p>
+<div class="row">
+    <div class="col-md-6 offset-md-3 mt-4">
+        <h3>Recuperación de contraseña</h3>
+        <form>
+            <div class="form-group">
+              <label for="recoveryEmail">Email</label>
+              <input type="email" 
+                     class="form-control" 
+                     id="recoveryEmail" 
+                     placeholder="Enter email">
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
+    </div>
+</div>
