--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="row">
+    <div class="col-md-6 offset-md-3 mt-4">
+        <h3>Inicio de sesión</h3>
+        <form>
+            <div class="form-group">
+              <label for="loginUsername">Username</label>
+              <input type="text" 
+                     class="form-control" 
+                     id="loginUsername" 
+                     placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="loginPassword">Password</label>
+              <input type="password" class="form-control" id="loginPassword" placeholder="Password">
+            </div>
+            <div class="form-group form-check">
+              <a [routerLink]="'/reset-password'">¿Olvidaste la contraseña?</a>
+            </div>
+            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+          </form>
+    </div>
+</div>
