--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,1 +1,38 @@
-<p>register works!</p>
+<div id="mainContainer" class="row container">
+    <div class="col-md-6 offset-md-4 mt-4">
+        <h3>Inicio de sesión</h3>
+        <form>
+            <div class="form-group">
+              <label for="loginUsername">Usuario</label>
+              <input type="text" 
+                     class="form-control" 
+                     id="loginUsername" >
+            </div>
+            <div class="form-group">
+                <label for="loginName">Nombre</label>
+                <input type="text" 
+                       class="form-control" 
+                       id="loginName" >
+            </div>
+            <div class="form-group">
+                <label for="loginSurname">Apellidos</label>
+                <input type="text" 
+                       class="form-control" 
+                       id="loginSurname">
+            </div>
+            <div class="form-group">
+                <label for="loginEmail">Email</label>
+                <input type="email" 
+                       class="form-control" 
+                       id="loginEmail">
+            </div>
+            <div class="form-group">
+              <label for="loginPassword">Contraseña</label>
+              <input type="password" class="form-control" id="loginPassword">
+            </div>
+            <div class="form-group form-check">
+              <a [routerLink]="'/reset-password'">¿Olvidaste la contraseña?</a>
+            </div>
+            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+          </form>
+    </div>
